# w5500-ros2driver

./: LICENSE  README.md
forcestick_msg/msg/: Force.msg
forcestick_ros2driver/: package.xml  setup.cfg  setup.py
forcestick_ros2driver/forcestick_ros2driver/: forcestick.py
w5500_msg/: CMakeLists.txt  package.xml
w5500_msg/msg/: Force.msg  ForceF3.msg  ForceF4.msg
w5500_ros2driver/: .gitignore  CMakeLists.txt  package.xml  setup.cfg  setup.py
w5500_ros2driver/launch/: csv_gen.launch.py  csv_gen_launch.py  w5500_f3_multi.launch.py  w5500_multi.launch.py
w5500_ros2driver/w5500_ros2driver/: bag_to_csv.py  csv_gen.py  force_plotter.py  forcestick.py  launchfile_menu.py  multi_force_viewer.py  output.csv  plot_forces.py  plot_forces.sh  plot_new.py  plot_output_tests.py  prueba_servidor.py  w5500.cpp  w5500.py  w5500_pruebaLuis.py  w5500_publisher.py  w5500_tcp_ip_backup.py  w5500prueba.py
w5500_ros2driver/w5500_ros2driver/csv_output/: .~lock.sensor_1_force.csv#  .~lock.sensor_2_force.csv#  .~lock.sensor_3_force.csv#  .~lock.sensor_4_force.csv#
w5500_ros2driver/w5500_ros2driver/rosbag2_2025_10_08-11_43_09/: metadata.yaml
w5500_ros2driver/w5500_ros2driver/rosbag2_2025_10_08-11_52_05/: metadata.yaml
w5500_ros2driver/w5500_ros2driver/rosbag2_2025_10_08-13_23_10/: metadata.yaml
w5500_ros2driver/w5500_ros2driver/rosbag2_2025_10_08-13_37_13/: metadata.yaml
