<?xml version="1.0"?>
<package format="3">
  <name>w5500_ros2driver</name>
  <version>0.0.0</version>
  <description>ROS2 C++ driver node for OpenCoRoCo (W5500 UDP/TCP interface)</description>

  <maintainer email="hongwenchen.k.c.w.90@gmail.com">Kevin Chen Wu</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>w5500_msg</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
